--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
-    "normalize-url": "^4.5.0",
-    "request": "^2.88.2"
+    "normalize-url": "^4.5.0"
   },
   "devDependencies": {
     "concurrently": "^6.0.2",
